@@ -1,3 +1,9 @@
+Wed Aug 26 19:20:26 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* random.c (random_rand): unified random_int and random_float.
+	  [ruby-dev:39158].  and fixes [ruby-core:24655], [ruby-core:24677],
+	  [ruby-core:24679].
+
 Wed Aug 26 18:59:59 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* test/test_tempfile.rb: merged from Hongli Lai's fork.
